   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2012-10-05 16:32 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbide/hbide.hbp
    - Deleted: -vcshead=hbide_v.ch

  * qtcontribs.hbp
    + Added: -vcshead=hbide/hbide_v.ch

2012-10-05 14:35 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  - hbide/hbide_v.ch
    - Deleted: header to fetch SVN revision no. 

  * hbide/hbide.hbp
    + Added: -vcshead=hbide_v.ch
       This generates the hbide_v.ch at build time and is included in 
       main.prg and misc.prg.
    ; TODO: one common function to pull this info than at two places.

2012-10-05 12:09 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbide/hbide_v.ch
    * Version change: always to last than current one. How to do ???

  * hbqt/qtcore/hbqt_bind.cpp
    ! Optimizations: in new protocol.

  * hbqt/tests/qtrevamp.prg
    5 Changed: Statics to locals.

2012-10-04 17:22 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/qtcore/hbqt_bind.cpp
    + Added: hbqt_bindAddConnected(), hbqt_bindDelConnected() functions.

  * hbqt/qtcore/hbqt_misc.prg
    + Added: class HbQtConnecteds().

    IMPLEMENTED: the objects having any signal connected to remain alive 
                 irrespective of the Harbour variable scope. Uptil now 
                 a :connect() to be functional, the variable holding the 
                 object had to remain in scope till the life of that 
                 connect's life-span. Now it is not needed. Below is 
                 the example ( hbqt/tests/qtrevamp.prg : snippet ):

                 STATIC FUNCTION BuildMenuBar( oWnd )
                    LOCAL oMenu1, oMenuBar
                 