@@ -16,6 +16,15 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2012-10-05 17:37 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
+  * hbide/main.prg
+    + Enabled: Codepage UTF-8 by default. 
+
+  * hbqt/qtgui/hbqt_init.cpp
+    ! Fixed: a nasty implementation belonging to UTF-8 codepage.
+       "UTF8" => "UTF-8" 
+       This caused unnecessary noise in the past.
+
 2012-10-05 16:32 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
   * hbide/hbide.hbp
     - Deleted: -vcshead=hbide_v.ch
